--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -279,6 +279,7 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
